# GiDAndroidApp

./: README.md  crossfile.txt  dub.json  meson.build  pix.xml
docker/: Dockerfile  meson.patch
